# librtc

./: CMakeLists.txt  README.md
docs/: basic_flow.vsd  usage.txt
docs/patch/: webrtc_mac.patch
docs/patch/openh264/: READEME.md  webrtc-h264.patch
docs/patch/openh264/h264/: h264.gyp  h264_impl.cc  h264_impl.h
inc/: xrtc_api.h  xrtc_common.h  xrtc_std.h
scripts/: build.sh  common.cmake  env_ninja.sh  extra.cmake  ios.cmake  mac.cmake  run_cfg.sh  unix.cmake
src/: CMakeLists.txt  constraints.h  mainx.cpp  media.cpp  observer.cpp  observer.h  peer.cpp  peer.h  stream.cpp  track.cpp  webrtc.cpp  webrtc.h
tests/: CMakeLists.txt  pclient.cpp  testrtc.cpp
ubase/: CMakeLists.txt  atomic.cpp  atomic.h  misc.cpp  mutex.cpp  refcount.h  ubase.cpp
